# AHFTSE

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
backend/api/: evaluate.py
backend/core/: config.py  logger.py
backend/engines/: citation_validator.py  detector.py  firewall_engine.py  trustscore.py
frontend/: index.html
tests/: conftest.py  test_api.py  test_engines.py
